--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <p id="welcome-el"></p>
             <h1>Stars Counted:</h1>
             <h2 id="count-el">0</h2>
-            <button id="increment-btn" onclick="increment()">INCREMENT</button>
+            <button id="increment-btn" onclick="increment()">COUNT +1</button>
             <button id="save-btn" onclick="save()">SAVE</button>
             <button id="reset-btn" onclick="reset()">RESET</button>
             <p id="save-el">Previous Entries: </p>
